[package]
name = "nickel_session"
version = "0.1.0"
authors = ["Kevin Butler <haqkrs@gmail.com>"]
description = "Session support for nickel.rs"
license = "MIT"
repository = "https://github.com/nickel-org/session"

[dependencies]
typemap = "0.3"
plugin = "0.2"
rustc-serialize = "0.3"
time = "0.1"
cookie = "^0.13"
byteorder = "0.5"
nickel = "^0.11"

[dependencies.nickel_cookies]
git = "https://github.com/nickel-org/cookies.git"
